--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "devburger-api",
-  "version": "1.0.0",
+  "version": "1.0.0", 
   "description": "DevBurger API",
   "main": "src/server.js",
   "scripts": {
@@ -25,6 +25,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
     "sequelize-cli": "^6.6.2",
     "sucrase": "^3.35.0"
